manifests/envs/news-demo/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rs-news-demo-ns
  labels:
    istio-injection: enabled
