manifests/envs/news-demo/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: front-gateway
spec:
  selector:
    istio: ingressgateway-news-demo
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
